# ark-diagnostic

./: .gitignore  ARK_DIAGNOSTIC.spec  ARK_DIAGNOSTIC_v0.py  README.md  ark_adapter.py  ark_hashimoto.py  ark_irreps.py  ark_local_b10.py  ark_main.py  ark_state.py  ark_stones.py  ark_wu.py  ark_wu_b10_probe.py  ark_wu_psi.py  build_pwa_data.py  main.py  pwa_bridge.py  pyproject.toml  test_ark.py  test_ark_adapter.py  test_ark_stones.py  test_pwa_e2e.py
.github/workflows/: pages.yml
ark_web/: index.html  main.js  manifest.webmanifest  styles.css  sw.js  ui_panels.js
ark_web/data/: dt.json  hashimoto.json  projectors.json  wu_sectors.json
ark_web/i18n/: el.json  en.json
ark_web/py/: ark_diagnostics.py  ark_geometry.py
